; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_objfun.c_mp_obj_fun_get_name.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_objfun.c_mp_obj_fun_get_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32* }

@MP_QSTR_ = common dso_local global i32 0, align 4
@mp_type_fun_native = common dso_local global i32 0, align 4
@mp_type_native_gen_wrap = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_obj_fun_get_name(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.TYPE_5__* @MP_OBJ_TO_PTR(i32 %5)
  store %struct.TYPE_5__* %6, %struct.TYPE_5__** %3, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %4, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @MP_BC_PRELUDE_SIG_DECODE(i32* %10)
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @mp_obj_code_get_name(i32* %12)
  ret i32 %13
}

declare dso_local %struct.TYPE_5__* @MP_OBJ_TO_PTR(i32) #1

declare dso_local i32 @MP_BC_PRELUDE_SIG_DECODE(i32*) #1

declare dso_local i32 @mp_obj_code_get_name(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
